feat : 인버터 추가 및 Sever 전송 로직 수정중

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ SET ( SRC_FILES
         #src/iot_nml35.c
         src/util/util.cpp
         src/inverter/0.inverter_base.cpp
-        src/inverter/1.growatt.cpp
+        src/inverter/1.Growatt.cpp
+        src/inverter/2.Sungrow.cpp
         )
 
 
